--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,19 @@
-buildscript {
-  ext {
-    springBootVersion = '2.1.2.RELEASE'
-  }
-  repositories {
-    mavenCentral()
-  }
-  dependencies {
-    classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-  }
+plugins {
+  id 'org.springframework.boot' version '2.7.5'
+  id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+  id 'java'
 }
-
-apply plugin: 'java'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
 
 group = 'com.eitan'
 version = '0.1'
-sourceCompatibility = '11'
+sourceCompatibility = '17'
 
 repositories {
   mavenCentral()
-  maven { url 'https://repo.spring.io/milestone' }
 }
 
 ext {
-  set('springCloudVersion', 'Greenwich.RC2')
+  set('springCloudVersion', '2021.0.4')
 }
 
 dependencies {
@@ -42,4 +31,8 @@ dependencyManagement {
   imports {
     mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
   }
+}
+
+tasks.named('test') {
+  useJUnitPlatform()
 }
